@@ -3,6 +3,8 @@
 #
 # $Id$
 #
+# This code is covered by the GNU General Public License. For details see the file "COPYING".
+#
 
 CFLAGS= -Wall -Wstrict-prototypes -fomit-frame-pointer -O2 -pipe -mips2
 
