@@ -2,6 +2,8 @@
  * (C) P.Horton 2004
  *
  * $Id$
+ *
+ * This code is covered by the GNU General Public License. For details see the file "COPYING".
  */
 
 #include <stdio.h>
